# arcwright-ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish-test.yml  publish.yml
_spec/brainstorming/: brainstorming-session-2026-02-26.md
_spec/implementation-artifacts/: 1-1-project-scaffold-and-package-structure.md  1-2-core-types-lifecycle-and-exception-hierarchy.md  1-3-configuration-system-with-two-tier-loading.md  1-4-cli-init-command.md  1-5-cli-validate-setup-command.md  10-1-dynamic-versioning-with-hatch-vcs.md  10-10-redact-api-key-from-langsmith-traces-via-secretstr.md  10-11-llm-extracted-agent-decisions-in-pr-body.md  10-12-quality-gate-automated-lint-format-type-check-and-test-validation.md  10-13-pr-creation-retry-with-backoff-for-github-api-lag.md  10-14-quality-gate-project-type-auto-detection.md  10-2-pyjwt-crit-header-vulnerability-remediation.md  10-3-langgraph-major-upgrade-deserialization-vulnerability-remediation.md  10-4-agent-scm-guardrails-and-commit-node-resilience.md  10-5-retry-attempts-should-rebuild-fresh-context.md  10-6-auto-merge-success-marked-error-on-branch-cleanup-failure.md  10-7-validate-node-overwrites-provenance-decision-provenance-missing-from-prs.md  10-8-pre-release-versioning-for-develop-branch.md  10-9-cli-version-command.md  11-1-pre-upgrade-audit-and-backup.md  11-1-pre-upgrade-audit-report.md  11-2-execute-bmad-6-1-installation-and-migration.md  11-3-post-upgrade-verification-and-development-workflow-smoke-test.md  12-1-mergeoutcome-enum-config-field-and-state-plumbing.md  12-2-rewrite-merge-pull-request-with-ci-wait.md  12-3-commit-node-mergeoutcome-integration.md  12-4-dispatch-loop-halt-on-merge-failure.md  13-1-structured-claude-error-taxonomy-and-remediation-contract.md  13-2-terminal-guidance-for-claude-platform-account-and-access-failures.md  13-3-terminal-guidance-for-local-claude-runtime-and-configuration-failures.md  13-4-terminal-guidance-for-transient-provider-failures-and-retryable-conditions.md  13-5-shared-error-rendering-redaction-and-troubleshooting-documentation.md  2-1-langgraph-state-models-and-graph-skeleton.md  2-2-context-injector-bmad-artifact-reader-and-reference-resolver.md  2-3-context-answerer-static-rule-lookup-engine.md  (+47 more)
arcwright-ai/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  langgraph.json  pyproject.toml
arcwright-ai/.github/workflows/: ci.yml  publish.yml
arcwright-ai/docs/: troubleshooting-claude-errors.md
arcwright-ai/src/arcwright_ai/: __init__.py  __main__.py
arcwright-ai/src/arcwright_ai/agent/: __init__.py  invoker.py  prompt.py  sandbox.py
arcwright-ai/src/arcwright_ai/cli/: __init__.py  app.py  clean.py  dispatch.py  halt.py  resume.py  status.py
arcwright-ai/src/arcwright_ai/context/: __init__.py  answerer.py  injector.py
arcwright-ai/src/arcwright_ai/core/: __init__.py  config.py  constants.py  errors.py  events.py  exceptions.py  io.py  lifecycle.py  types.py
arcwright-ai/src/arcwright_ai/engine/: __init__.py  graph.py  nodes.py  state.py
arcwright-ai/src/arcwright_ai/output/: __init__.py  decisions.py  provenance.py  run_manager.py  summary.py
arcwright-ai/src/arcwright_ai/scm/: __init__.py  branch.py  git.py  pr.py  worktree.py
arcwright-ai/src/arcwright_ai/validation/: __init__.py  pipeline.py  quality_gate.py  v3_reflexion.py  v6_invariant.py
arcwright-ai/tests/: __init__.py  conftest.py
arcwright-ai/tests/fixtures/: mock_sdk.py
arcwright-ai/tests/fixtures/projects/invalid_project/: README.md
arcwright-ai/tests/fixtures/projects/partial_project/: README.md
arcwright-ai/tests/fixtures/projects/valid_project/: README.md
arcwright-ai/tests/integration/: __init__.py
arcwright-ai/tests/test_agent/: __init__.py  test_invoker.py  test_prompt.py  test_sandbox.py
arcwright-ai/tests/test_cli/: __init__.py  test_clean.py  test_dispatch.py  test_halt.py  test_init.py  test_resume.py  test_status.py  test_validate_setup.py  test_version.py
arcwright-ai/tests/test_context/: __init__.py  test_answerer.py  test_injector.py
arcwright-ai/tests/test_core/: __init__.py  test_config.py  test_constants.py  test_errors.py  test_events.py  test_exceptions.py  test_io.py  test_lifecycle.py  test_types.py
arcwright-ai/tests/test_engine/: __init__.py  test_graph.py  test_nodes.py  test_scm_integration.py  test_state.py
arcwright-ai/tests/test_output/: __init__.py  test_cost_formatting.py  test_decisions.py  test_provenance.py  test_run_manager.py  test_summary.py
arcwright-ai/tests/test_scm/: __init__.py  test_branch.py  test_branch_integration.py  test_clean_integration.py  test_git.py  test_pr.py  test_scm_integration.py  test_worktree.py  test_worktree_integration.py
arcwright-ai/tests/test_validation/: __init__.py  test_pipeline.py  test_quality_gate.py  test_v3_reflexion.py  test_v6_invariant.py
docs/: validation-pipeline.md
(+9 files in other folders)
